2008-04-17 - Eric Laffoon <sequitur@kde.org>
    o added round function in strings to round number to x digits
2008-04-14 - Eric Laffoon <sequitur@kde.org>
    o added cut, copy and paste to editor popup menu
    o added file exists function
    0 added geometry and hasFocus to primary data widgets
2008-03-28 - Eric Laffoon <sequitur@kde.org>
    o added test geometry function to buttons for popup use
2008-03-23 - Eric Laffoon <sequitur@kde.org>
    o it's about time scripts had a boolean execute slot!
2008-03-23 - Eric Laffoon <sequitur@kde.org>
    o Table - added keepCellVisible for my application - I will need to clean up the code if I want to release it as I want to rename some things and do other cleanup
    o ComboBox - added popupList to bring up the list without using the mouse - faster data entry
2008-03-22 - Eric Laffoon <sequitur@kde.org>
    o LineEdit - added gotfocus event
2008-03-20 - Eric Laffoon <sequitur@kde.org>
    o made actions sort along with widgets in the connection dialog
    o Tree/Detail (ListView) widget - enabled adding columns
    o Tree/Detail (ListView) widget - enabled removing columns (copied from table widget)
    o Tree/Detail (ListView) widget - return column count
    o Tree/Detail (ListView) widget - return column caption for given index
    o Tree/Detail (ListView) widget - set sort column and where ASC or DESC
    o Tree/Detail (ListView) widget - set column width - serves as hide colum at 0 width
    o Table widget - add column sort that does by whole rows - doesn't do well with float as strings :(
    o TextEdit - added lostFocus event
    o LineEdit - added gotFocus event
    o fixed about dialog license to take text and files correctly
2008-03-19 - Andras Mantia <amantia@kde.org>
    o regression: add back the missing str_compare function. 
2008-03-18 - Eric Laffoon <sequitur@kde.org>
    o raised the number of allowed paramaters for scripts
2008-03-10 - Eric Laffoon <sequitur@kde.org>